# vyatta-webproxy

./: .frlog  .gitignore  Jenkinsfile  Makefile.am  README  configure.ac
cgi/: squidGuard-simple.cgi
debian/: README  changelog  control  copyright  lintian  rules  vyatta-webproxy.postinst.in
lib/Vyatta/: Webproxy.pm
scripts/: VyattaWebproxy.pm  install-blacklist  test_uf  vyatta-clear-squid  vyatta-restart-squid  vyatta-sg-blacklist.pl  vyatta-sg-summary.pl  vyatta-show-webproxy.pl  vyatta-update-webproxy.pl
sysconf/: safesearch_rewrites
templates-cfg/service/webproxy/: node.def
templates-cfg/service/webproxy/append-domain/: node.def
templates-cfg/service/webproxy/authentication/: node.def
templates-cfg/service/webproxy/cache-management/: node.def
templates-cfg/service/webproxy/cache-peer/: node.def
templates-cfg/service/webproxy/cache-size/: node.def
templates-cfg/service/webproxy/default-port/: node.def
templates-cfg/service/webproxy/destination-ports/: node.def
templates-cfg/service/webproxy/disable-access-log/: node.def
templates-cfg/service/webproxy/domain-block/: node.def
templates-cfg/service/webproxy/domain-noncache/: node.def
templates-cfg/service/webproxy/listen-address/: node.def
templates-cfg/service/webproxy/listening-address/: node.def
templates-cfg/service/webproxy/log-settings/: node.def
templates-cfg/service/webproxy/maximum-object-size/: node.def
templates-cfg/service/webproxy/mem-cache-size/: node.def
templates-cfg/service/webproxy/minimum-object-size/: node.def
templates-cfg/service/webproxy/network-based-access-control/: node.def
templates-cfg/service/webproxy/outgoing-address/: node.def
templates-cfg/service/webproxy/proxy-bypass/: node.def
templates-cfg/service/webproxy/proxy-bypass-source/: node.def
templates-cfg/service/webproxy/remote-syslog/: node.def
templates-cfg/service/webproxy/reply-block-mime/: node.def
templates-cfg/service/webproxy/reply-body-max-size/: node.def
templates-cfg/service/webproxy/squidguard/: node.def
templates-cfg/service/webproxy/url-filtering/: node.def
templates-cfg/service/webproxy/whitelist/: node.def
templates-op/clear/webproxy/: node.def
templates-op/monitor/webproxy/access-log/: node.def
templates-op/monitor/webproxy/cache-log/: node.def
templates-op/restart/webproxy/: node.def
templates-op/show/webproxy/: node.def
templates-op/update/: node.def
templates-op/update/webproxy/: node.def
templates-op/web-proxy/: node.def
templates-op/web-proxy/restart-squid/: node.def
templates-op/web-proxy/status/: node.def
(+113 files in other folders)
